[gd_scene load_steps=15 format=2]

[ext_resource path="res://gameplay/main/main.gd" type="Script" id=1]
[ext_resource path="res://gameplay/warning_label/warning_label.tscn" type="PackedScene" id=2]
[ext_resource path="res://gameplay/main/gui/fast_forward/off.png" type="Texture" id=3]
[ext_resource path="res://gameplay/player/player.tscn" type="PackedScene" id=4]
[ext_resource path="res://gameplay/railtrack/railtrack.tscn" type="PackedScene" id=5]
[ext_resource path="res://gameplay/destination_area/destination_area.tscn" type="PackedScene" id=6]
[ext_resource path="res://menus/level_win_menu/level_win_menu.tscn" type="PackedScene" id=7]
[ext_resource path="res://gameplay/main/gui/fast_forward/on.png" type="Texture" id=8]
[ext_resource path="res://menus/pause_menu/pause_menu.tscn" type="PackedScene" id=9]
[ext_resource path="res://fonts/Ubuntu-B.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://gameplay/main/gui/restart_level/restart_level.png" type="Texture" id=11]
[ext_resource path="res://menus/game_over_menu/game_over.tscn" type="PackedScene" id=12]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.968627, 0.705882, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.768627, 0.435294, 0, 1 )

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 10 )

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="destination_area" parent="." instance=ExtResource( 6 )]
position = Vector2( 383.882, -112.246 )

[node name="warning_label" parent="." instance=ExtResource( 2 )]

[node name="buildings" type="Node2D" parent="."]

[node name="texts" type="Node2D" parent="."]

[node name="railtrack" parent="." instance=ExtResource( 5 )]
position = Vector2( 0.943848, 0 )

[node name="player" parent="railtrack" instance=ExtResource( 4 )]
position = Vector2( -323.269, -1.12244 )

[node name="gui" type="Node" parent="."]

[node name="level_win_menu" parent="gui" instance=ExtResource( 7 )]
visible = false

[node name="restart_level_button" type="TextureButton" parent="gui"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -105.0
margin_right = 105.0
margin_bottom = -5.0
texture_normal = ExtResource( 11 )

[node name="game_over" parent="gui" instance=ExtResource( 12 )]
visible = false

[node name="return_to_level_editor_button" type="Button" parent="gui"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -34.0
margin_right = 264.0
text = "Return to level editor"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fast_foward_button" type="TextureButton" parent="gui"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -105.0
margin_top = -105.0
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause_menu" parent="gui" instance=ExtResource( 9 )]
margin_left = -1.41424
margin_top = 1.41418
margin_right = -1.41418
margin_bottom = 1.41418

[node name="remaining_actions" type="Panel" parent="gui"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -60.0
margin_right = 200.0
margin_bottom = -10.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container" type="CenterContainer" parent="gui/remaining_actions"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="gui/remaining_actions/container"]
modulate = Color( 0.768627, 0.435294, 0, 1 )
margin_left = 52.0
margin_top = 8.0
margin_right = 348.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 1 )
text = "Remaining actions: 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="all_passengers_left" from="destination_area" to="." method="_on_destination_area_all_passengers_left"]
[connection signal="n_remaining_actions_updated" from="railtrack" to="." method="_on_railtrack_n_remaining_actions_updated"]
[connection signal="node_added" from="railtrack" to="railtrack/player" method="_on_railtrack_node_added"]
[connection signal="node_removed" from="railtrack" to="railtrack/player" method="_on_railtrack_node_removed"]
[connection signal="warning_added" from="railtrack" to="." method="_on_railtrack_warning_added"]
[connection signal="game_over" from="railtrack/player" to="." method="_on_player_train_game_over"]
[connection signal="continue_pressed" from="gui/level_win_menu" to="." method="_on_level_win_menu_continue_pressed"]
[connection signal="button_down" from="gui/restart_level_button" to="." method="_on_restart_level_button_button_down"]
[connection signal="restart_level_requested" from="gui/game_over" to="." method="_on_game_over_restart_level_requested"]
[connection signal="pressed" from="gui/return_to_level_editor_button" to="." method="_on_return_to_level_editor_button_pressed"]
[connection signal="toggled" from="gui/fast_foward_button" to="." method="_on_fast_foward_button_toggled"]
